# waterfall-rs

./: .gitignore  .tmuxinator.yml  Cargo.toml  README.md  index.html
.github/workflows/: bench.yml  build.yml  pages.yml  rust.yml  test.yml
benches/: aggregator.rs  correlation.rs  correlator.rs  rx.rs  waterfall_processor.rs
examples/: ft8_perf.rs  ft8_sync.rs
src/: app.rs  configuration.rs  filter_cutoff.rs  lib.rs  main.rs  message.rs  messages.rs  plot_data.rs  recorder.rs  scope.rs  statistics.rs  turbo.rs  types.rs  units.rs  waterfall_plot.rs  waterfall_processor.rs  waterfall_ticks.rs
src/configuration/: audio_sample_rate.rs  mod.rs  scope_settings.rs  tuner_settings.rs
src/dsp/: aggregator.rs  correlation.rs  correlation_bench.rs  correlator.rs  downsample.rs  fft.rs  ft8_rx.rs  ifft.rs  mod.rs  processor.rs  rx.rs  rx_bench.rs  waterfall_processor.rs
src/dsp/decode/: mod.rs
src/dsp/decode/rtty/: message_state_machine.rs  mod.rs  state_machine.rs  symbols.rs
src/dsp/fir/: asymmetric_fir.rs  fir_builder.rs  mod.rs  symmetric_fir.rs
src/dsp/rx/: conditioner.rs  mod.rs  rx_mode.rs  symbolizer.rs  synchronizer.rs  synchronizer.rs.bak
src/filter/: band_pass_filter.rs  filter.rs  high_pass_filter.rs  low_pass_filter.rs  mod.rs
src/input/: audio.rs  example.rs  instant_synth.rs  mod.rs  synth.rs
src/synth/: mixer.rs  mod.rs  samples.rs  sine.rs
src/synth/ft8/: message.rs  mod.rs  signal.rs  single_symbol.rs  symbol.rs  sync_signal.rs
src/ui/: about.rs  bump.rs  filter_cutoff.rs  messages.rs  mod.rs  scope.rs  settings.rs  toolbar.rs  waterfall_plot.rs  waterfall_ticks.rs  windows.rs
src/ui/scope_viewer/: buttons.rs  mod.rs  settings.rs
src/units/: frequency.rs  mod.rs  time.rs
tests/: correlation.rs  ft8_receive.rs
