[package]
name = "waterfall-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# lto = true

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "898f4804" }
fixed-vec-deque = "0.1.9"
realfft = "3.0.0"
rustfft = "6.0.1"
soundio = "0.2.1"
