[package]
name = "waterfall-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# lto = true

[dependencies]
cpal = "0.13.5"
eframe = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "898f4804" }
rand = "0.8.5"
rayon = "1.5.3"
realfft = "3.0.0"
rustfft = "6.0.1"
