[package]
name = "waterfall-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# lto = true

[dependencies]
cpal = "0.13.5"
eframe = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui = { git = "https://github.com/emilk/egui", rev = "898f4804" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "898f4804" }
float-cmp = "0.4.0"
#futures = { version = "0.3.23", feature = ["executor"] }
rand = "0.8.5"
realfft = "3.0.0"
# rustfft = "6.0.1"
rustfft = { git = "https://github.com/ejmahler/RustFFT", rev = "3dd012c0", feature = "neon-nightly" }
statrs = "0.16.0"
#tokio = { version = "1.20.1", features = ["full"] }
tokio = { version = "1.20.1", features = ["sync"] }
wasm-timer = "0.2.5"
rayon = "1.6.0"
rust-embed = "8.2.0"
hound = "3.5.1"

[dev-dependencies]
indicatif = {version = "0.17.2", features = ["rayon"]}
plotters = "0.3.4"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
getrandom = { version = "0.2.7", features = ["js"] }
